# kafka-producer-consumer

./: .gitignore  docker-compose.yaml
consumer/: Dockerfile  config.ini  pyproject.toml  requirements.txt
consumer/consumer/: bootstrap.py  handler.py  main.py
consumer/tests/: consumer_test.py
producer/: Dockerfile
producer/producer/: bootstrap.py  handler.py  main.py
