[build-system]
version = "0.1"
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=consumer --cov-report=xml --junitxml=consumer-test-results.xml"
python_files = ["test_*.py", "*_test.py", "tests/*.py"]
python_functions = ["test"]
python_classes = ["Test"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:'cgi':DeprecationWarning:httpx"
]


markers = [
  "unit"
]
